added logo and menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
 <body>
     <script src="js/main.js"></script>
+    <section class="top">
+        <header>
+            <h2 class="logo">ClawsByCat</h2>
+            <div class="menu_btn">
+                <div class="menu_btn_open"></div>
+            </div>
+        </header>
+    </section>
 </body>
 
 </html>
