--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
 </head>
 
 <body>
-    <script src="js/main.js"></script>
-    <section class="top">
-        <header>
-            <h2 class="logo">ClawsByCat</h2>
-            <div class="menu_btn">
-                <div class="menu_btn_open"></div>
-            </div>
-        </header>
-    </section>
+    <div class="menu-btn">
+        <div class="menu-btn__open"></div>
+    </div>
 </body>
 
 </html>
