--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -5,13 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClawsByCat</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="menu-btn">
-        <div class="menu-btn__open"></div>
-    </div>
+    <script src="js/main.js"></script>
+    <section class="top">
+        <header>
+            <div class="menu_btn">
+                <div class="menu_btn_closed"></div>
+            </div>
+        </header>
+    </section>
 </body>
 
 </html>
