--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <section class="top">
         <header>
+            <h2 class="logo">ClawsByCat</h2>
             <div class="menu_btn">
                 <div class="menu_btn_closed"></div>
             </div>
