--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClawsByCat</title>
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+
+    <!--    
     <section class="top">
         <header>
             <h2 class="logo">ClawsByCat</h2>
@@ -21,6 +26,7 @@
     </section>
 
     <script src="js/main.js"></script>
+-->
 </body>
 
 </html>
