--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <h2>ClawsByCat</h2>
+        </div>
 
-    <h2>ClawsByCat</h2>
+        <div class="nav">
+            <div class="menu-desktop"></div>
+        </div>
+    </header>
     <!--    
     <section class="top">
         <header>
