--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
 <body>
     <header>
-        <div class="container">
-            <h2>ClawsByCat</h2>
-        </div>
-
         <div class="nav">
+            <h2>ClawsByCat</h2>
             <div class="menu-desktop"></div>
+            <a href="#">Start</a>
+            <a href="#">Tjänster</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Kontakt</a>
+        </div>
         </div>
     </header>
     <!--    
