--- a/index.html
+++ b/index.html
@@ -14,16 +14,33 @@
 
 <body>
     <header>
-        <div class="nav">
+        <div class="container">
             <h2>ClawsByCat</h2>
-            <div class="menu-desktop"></div>
-            <a href="#">Start</a>
-            <a href="#">Tjänster</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Kontakt</a>
-        </div>
+            <nav>
+                <div class="menu-desktop">
+                    <a href="#">Start</a>
+                    <a href="#">Tjänster</a>
+                    <a href="#">Portfolio</a>
+                    <a href="#">Kontakt</a>
+                </div>
+            </nav>
         </div>
     </header>
+    <main>
+
+        <section class="top">
+            <div class="container">
+                <h1>
+                    You are beautyfull<br> And so are your nails.
+                </h1>
+                <h3>
+                    Your beauty salon
+                </h3>
+            </div>
+        </section>
+    </main>
+
+
     <!--    
     <section class="top">
         <header>
