--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             </nav>
         </div>
     </header>
+
     <main>
 
-        <section class="top">
+        <section class="article">
             <div class="container">
                 <h1>
                     You are beautyfull<br> And so are your nails.
@@ -36,6 +37,7 @@
                 <h3>
                     Your beauty salon
                 </h3>
+
             </div>
         </section>
     </main>
