--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <h2>ClawsByCat</h2>
+            <h2>ClawsByCat<br>Your beuty salon</h2>
             <nav>
                 <div class="menu-desktop">
                     <a href="#">Start</a>
@@ -34,9 +34,7 @@
                 <h1>
                     You are beautyfull<br> And so are your nails.
                 </h1>
-                <h3>
-                    Your beauty salon
-                </h3>
+
 
             </div>
         </section>
