--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,35 +24,12 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <h2>ClawsByCat<br>Your beuty salon</h2>
-            <nav>
-                <div class="menu-desktop">
-                    <a href="#">Start</a>
-                    <a href="#">Tjänster</a>
-                    <a href="#">Portfolio</a>
-                    <a href="#">Kontakt</a>
-                </div>
-            </nav>
-        </div>
-    </header>
 
-    <main>
+</body>
 
-        <section class="article">
-            <div class="container">
-                <h1>
-                    You are beautyfull<br> And so are your nails.
-                </h1>
+</html>
 
-
-            </div>
-        </section>
-    </main>
-
-
-    <!--    
+<!--    
     <section class="top">
         <header>
             <h2 class="logo">ClawsByCat</h2>
@@ -53,6 +41,3 @@
 
     <script src="js/main.js"></script>
 -->
-</body>
-
-</html>
