--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="container-nav">
+            <h2>ClawsByCat</h2>
+            <nav>
+                <a href="#">Hem</a>
+                <a href="#">Tjänster</a>
+                <a href="#">Portfoljo</a>
+                <a href="#">Kontakt</a>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
