--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section id="middle">
+            <div class="container-mid">
+
+            </div>
+
+        </section>
+    </main>
+
 </body>
 
 </html>
