--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
                 <a href="#">Kontakt</a>
             </nav>
         </div>
+        <div class="logo">
+            asdf
+        </div>
     </header>
     <main>
         <section id="middle">
             <div class="container-mid">
-
+                <h1>
+                    YOU are BEUTYFULL<br>and so are your NAILS
+                </h1>
             </div>
 
         </section>
