trying to fix the logo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <header>
         <div class="container-nav">
             <h2>ClawsByCat</h2>
+
             <nav>
                 <a href="#">Hem</a>
                 <a href="#">Tjänster</a>
@@ -35,7 +36,7 @@
             </nav>
         </div>
         <div class="logo">
-            asdf
+            Your personal salon
         </div>
     </header>
     <main>
