--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h2>ClawsByCat</h2>
 
             <nav>
-                <a href="#">Hem</a>
-                <a href="#">Tjänster</a>
-                <a href="#">Portfoljo</a>
-                <a href="#">Kontakt</a>
+                <a href="/index.html">Hem</a>
+                <a href="/tjanster.html">Tjänster</a>
+                <a href="/portfolio.html">Portfoljo</a>
+                <a href="/kontakt.html">Kontakt</a>
             </nav>
         </div>
 
