--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav>
                 <a href="/index.html">Hem</a>
                 <a href="/tjanster.html">Tjänster</a>
-                <a href="/portfolio.html">Portfoljo</a>
+                <a href="/tjanster.html">Portfoljo</a>
                 <a href="/kontakt.html">Kontakt</a>
             </nav>
         </div>
