finished flexbox design

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <div class="container-top">
             <div class="box1">
                 <h3>
-                    BOx1
-                </h3>
+                    ClawsByCat
+                    <br>Your personal salon</h3>
             </div>
 
             <div class="box2">
-                <h3>box2</h3>
+                <a href="/index.html">Hem</a>
+                <a href="/tjanster.html">Tjänster</a>
+                <a href="/tjanster.html">Portfoljo</a>
+                <a href="/kontakt.html">Kontakt</a>
             </div>
         </div>
 
