--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
     <div class="video">
 
         <div class="container-top">
-            <div class="box1">
+            <div class="logo">
                 <h3>
                     ClawsByCat
-                    <br>Your personal salon</h3>
+                    <br><span>Your personal salon</span></h3>
             </div>
 
             <div class="box2">
-                <a href="/index.html">Hem</a>
-                <a href="/tjanster.html">Tjänster</a>
-                <a href="/tjanster.html">Portfoljo</a>
-                <a href="/kontakt.html">Kontakt</a>
+                <nav>
+                    <a href="/index.html">Hem</a>
+                    <a href="/tjanster.html">Tjänster</a>
+                    <a href="/tjanster.html">Portfoljo</a>
+                    <a href="/kontakt.html">Kontakt</a>
+                </nav>
             </div>
+
         </div>
 
 
