video "kanske" färdig

--- a/index.html
+++ b/index.html
@@ -9,43 +9,42 @@
 </head>
 
 <body>
-    <div class="video">
-        <video src="/Video/nails1.mp4" muted loop autoplay></video>
-        <div class="content">
-            <div class="container-top">
-                <div class="logo">
-                    <h3>
-                        ClawsByCat
-                        <br><span>Your personal salon</span></h3>
-                </div>
+    <video src="/Video/nails1.mp4" muted loop autoplay></video>
 
-                <div class="box2">
-                    <nav>
-                        <a href="/index.html">Hem</a>
-                        <a href="/tjanster.html">Tjänster</a>
-                        <a href="/tjanster.html">Portfoljo</a>
-                        <a href="/kontakt.html">Kontakt</a>
-                    </nav>
-                </div>
-
+    <div class="content">
+        <div class="container-top">
+            <div class="logo">
+                <h3>
+                    ClawsByCat
+                    <br><span>Your personal salon</span></h3>
             </div>
 
-
-
-            <div class="container-mid">
-                <div class="box3">
-                    <h3>box3</h3>
-                </div>
+            <div class="box2">
+                <nav>
+                    <a href="/index.html">Hem</a>
+                    <a href="/tjanster.html">Tjänster</a>
+                    <a href="/tjanster.html">Portfoljo</a>
+                    <a href="/kontakt.html">Kontakt</a>
+                </nav>
             </div>
 
-            <div class="container-bot">
-                <div class="box4">
-                    <h3>box4</h3>
-                </div>
+        </div>
 
-                <div class="box5">
-                    <h3>box5</h3>
-                </div>
+        <div class="overlay"></div>
+
+        <div class="container-mid">
+            <div class="box3">
+                <h3>box3</h3>
+            </div>
+        </div>
+
+        <div class="container-bot">
+            <div class="box4">
+                <h3>box4</h3>
+            </div>
+
+            <div class="box5">
+                <h3>box5</h3>
             </div>
         </div>
     </div>
