added social ikons

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
         </div>
 
+
+
         <div class="overlay"></div>
 
         <div class="container-mid">
@@ -43,8 +45,10 @@
                 <h3>box4</h3>
             </div>
 
-            <div class="box5">
-                <h3>box5</h3>
+            <div class="social">
+                <a href="#"><img src="/img/facebook.png" alt=""></a>
+                <a href="#"><img src="/img/instagram.png" alt=""></a>
+                <a href="#"><img src="/img/twitter.png" alt=""></a>
             </div>
         </div>
     </div>
