design färdig, kanske

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 
 <body>
     <video src="/Video/nails1.mp4" muted loop autoplay></video>
+    <div class="overlay"></div>
 
     <div class="content">
         <div class="container-top">
             <div class="logo">
-                <h3>
-                    ClawsByCat
-                    <br><span>Your personal salon</span></h3>
+                <h2>
+                    <span>ClawsByCat</span>
+                    <br>Your personal salon</h2>
             </div>
 
             <div class="box2">
                 <nav>
-                    <a href="/index.html">Hem</a>
+                    <a href="#">Hem</a>
                     <a href="/tjanster.html">Tjänster</a>
-                    <a href="/tjanster.html">Portfoljo</a>
+                    <a href="/portfolio.html">Portfoljo</a>
                     <a href="/kontakt.html">Kontakt</a>
                 </nav>
             </div>
@@ -32,17 +33,18 @@
 
 
 
-        <div class="overlay"></div>
+
 
         <div class="container-mid">
             <div class="box3">
-                <h3>box3</h3>
+                <h3> <span>YOU</span> are <span>BEAUTYFUL</span> <br>and so are you <span> NAILS</span></h3>
             </div>
         </div>
 
         <div class="container-bot">
             <div class="box4">
-                <h3>box4</h3>
+
+                <h4>Cathrine Nailer <br> Tel: +46763299999</h4>
             </div>
 
             <div class="social">
