--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-top">
             <div class="logo">
                 <h2>
-                    <span>ClawsByCat</span>
+                    <a href="/index.html"><span>ClawsByCat</span></a>
                     <br>Your personal salon</h2>
             </div>
 
@@ -48,9 +48,9 @@
             </div>
 
             <div class="social">
-                <a href="#"><img src="/img/facebook.png" alt=""></a>
-                <a href="#"><img src="/img/instagram.png" alt=""></a>
-                <a href="#"><img src="/img/twitter.png" alt=""></a>
+                <a href="#" id="facebook"><img src="/img/facebook.png" alt=""></a>
+                <a href="#" id="instagram"><img src="/img/instagram.png" alt=""></a>
+                <a href="#" id="twitter"><img src="/img/twitter.png" alt=""></a>
             </div>
         </div>
     </div>
