--- a/kontakt.html
+++ b/kontakt.html
@@ -22,10 +22,10 @@
 
             <div class="box2">
                 <nav>
-                    <a href="#">Hem</a>
-                    <a href="/tjanster.html">Tjänster</a>
-                    <a href="/portfolio.html">Portfoljo</a>
-                    <a href="/kontakt.html">Kontakt</a>
+                    <a class="hover" href="/index.html">Hem</a>
+                    <a class="hover" href="/tjanster.html">Tjänster</a>
+                    <a class="hover" href="/portfolio.html">Portfoljo</a>
+                    <a class="hover" href="/kontakt.html">Kontakt</a>
                 </nav>
             </div>
 
@@ -37,8 +37,17 @@
 
         <div class="container-mid">
             <div class="box3">
-                <h3> <span>YOU</span> are <span>BEAUTYFUL</span> <br>and so are you <span> NAILS</span></h3>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d760.8858554022072!2d12.473066978366065!3d57.35715906389888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1624024696056!5m2!1ssv!2sse" width="600" height="450" style="border:0;"
+                        allowfullscreen="" loading="lazy"></iframe>
+
+                    <h5>CATHRINE NAILER <br> Tel <br> +467632999999 <br> Välkommen till Lunnaliden 15 <br> För vägbeskrivning tryck på länken nedan. <br>
+                        <a href="https://goo.gl/maps/RK8cYGF596B8ajdr8">Min påhittade adress</a></h5>
+
+
+                </div>
             </div>
+
         </div>
 
         <div class="container-bot">
@@ -48,9 +57,9 @@
             </div>
 
             <div class="social">
-                <a href="#" id="facebook"><img src="/img/facebook.png" alt=""></a>
-                <a href="#" id="instagram"><img src="/img/instagram.png" alt=""></a>
-                <a href="#" id="twitter"><img src="/img/twitter.png" alt=""></a>
+                <a class="hover" href="#" id="facebook"><img src="/img/facebook.png" alt=""></a>
+                <a class="hover" href="#" id="instagram"><img src="/img/instagram.png" alt=""></a>
+                <a class="hover" href="#" id="twitter"><img src="/img/twitter.png" alt=""></a>
             </div>
         </div>
     </div>
