--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
             <div class="box2">
                 <nav>
-                    <a href="#">Hem</a>
-                    <a href="/tjanster.html">Tjänster</a>
-                    <a href="/portfolio.html">Portfoljo</a>
-                    <a href="/kontakt.html">Kontakt</a>
+                    <a class="hover" href="/index.html">Hem</a>
+                    <a class="hover" href="/tjanster.html">Tjänster</a>
+                    <a class="hover" href="/portfolio.html">Portfoljo</a>
+                    <a class="hover" href="/kontakt.html">Kontakt</a>
                 </nav>
             </div>
 
@@ -48,9 +48,9 @@
             </div>
 
             <div class="social">
-                <a href="#" id="facebook"><img src="/img/facebook.png" alt=""></a>
-                <a href="#" id="instagram"><img src="/img/instagram.png" alt=""></a>
-                <a href="#" id="twitter"><img src="/img/twitter.png" alt=""></a>
+                <a class="hover" href="#" id="facebook"><img src="/img/facebook.png" alt=""></a>
+                <a class="hover" href="#" id="instagram"><img src="/img/instagram.png" alt=""></a>
+                <a class="hover" href="#" id="twitter"><img src="/img/twitter.png" alt=""></a>
             </div>
         </div>
     </div>
