--- a/kontakt.html
+++ b/kontakt.html
@@ -41,10 +41,10 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d760.8858554022072!2d12.473066978366065!3d57.35715906389888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1624024696056!5m2!1ssv!2sse" width="600" height="450" style="border:0;"
                         allowfullscreen="" loading="lazy"></iframe>
                     <div class="kontakt">
-                        <h5>CATHRINE NAILER <br> Tel <br> +467632999999 <br> Välkommen till Lunnaliden 15 <br> För vägbeskrivning tryck på länken nedan. <br>
-                            <a href="https://goo.gl/maps/RK8cYGF596B8ajdr8">Min påhittade adress</a></h5>
-                    </div>
+                        <h5>CATHRINE NAILER <br> Tel <br> +467632999999 <br> Välkommen till Lunnaliden 15 <br> För vägbeskrivning tryck på länken nedan. <br></h5>
 
+                    </div>
+                    <a class="map-link" href="https://goo.gl/maps/RK8cYGF596B8ajdr8">Min påhittade adress</a>
                 </div>
             </div>
 
