media doooooesnt work damnit!

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
 
             <div class="box2">
-                <nav>
-                    <a class="hover" href="/index.html">Hem</a>
-                    <a class="hover" href="/tjanster.html">Tjänster</a>
-                    <a class="hover" href="/portfolio.html">Portfoljo</a>
-                    <a class="hover" href="/kontakt.html">Kontakt</a>
+                <nav class="hidemobile">
+                    <a class="hover" class="hidemobile" href="/index.html">Hem</a>
+                    <a class="hover" class="hidemobile" href="/tjanster.html">Tjänster</a>
+                    <a class="hover" class="hidemobile" href="/portfolio.html">Portfoljo</a>
+                    <a class="hover" class="hidemobile" href="/kontakt.html">Kontakt</a>
                 </nav>
             </div>
 
@@ -36,7 +36,7 @@
 
 
 
-        <div class="container-mid">
+        <div class="container-mid" class="hidemobile">
             <div class="box3">
                 <h3> <span>YOU</span> are <span>BEAUTYFUL</span> <br>and so are you <span> NAILS</span></h3>
             </div>
