--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                     <a class="hover" class="hidemobile" href="/portfolio.html">Portfoljo</a>
                     <a class="hover" class="hidemobile" href="/kontakt.html">Kontakt</a>
                 </nav>
+                <div class="menu-mob">
+                    <h2>
+                        <ul>
+                            <li><a class="hover" href="/index.html">Hem</a></li>
+                            <li><a class="hover" href="/tjanster.html">Tjänster</a></li>
+                            <li><a class="hover" href="/portfolio.html">Portfoljo</a></li>
+                            <li><a class="hover" href="/kontakt.html">Kontakt</a></li>
+                        </ul>
+                    </h2>
+                </div>
             </div>
 
         </div>
