--- a/tjanster.html
+++ b/tjanster.html
@@ -46,9 +46,19 @@
 
 
 
-        <div class="container-mid" class="hidemobile">
+        <div class="container-mid">
             <div class="box3">
-                <h3> <span>YOU</span> are <span>BEAUTYFUL</span> <br>and so are you <span> NAILS</span></h3>
+                <article>
+                    <div class="services1">
+                        <h5>NAGLAR</h5>
+                    </div>
+                    <div class="services2">
+                        <h5>LASHLIFT</h5>
+                    </div>
+                    <div class="services3">
+                        <h5>BROWLIFT</h5>
+                    </div>
+                </article>
             </div>
         </div>
 
