--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ClawsByCat</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="/js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
 </head>
 
 <body>
+
     <div class="content">
         <video src="/Video/nails1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
@@ -16,9 +19,11 @@
 
         <div class="container-top">
             <div class="logo">
-                <h2>
-                    <a href="/index.html"><span>ClawsByCat</span></a>
-                    <br>Your personal salon</h2>
+
+                <a href="/index.html">
+                    <h2"><span>ClawsByCat</span></h2>
+                </a>
+                <h2>Your personal salon</h2>
             </div>
 
             <div class="box2">
