--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>ClawsByCat</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="/js/main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
 </head>
 
 <body>
@@ -21,9 +20,9 @@
             <div class="logo">
 
                 <a href="/index.html">
-                    <h2"><span>ClawsByCat</span></h2>
+                    <h2> <span>ClawsByCat</span></h2>
                 </a>
-                <h2>Your personal salon</h2>
+                <h2 id="anim">Your personal salon</h2>
             </div>
 
             <div class="box2">
