--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClawsByCat</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/main.js"></script>
+
 </head>
 
 <body>
-
+    <div class="cursor"></div>
     <div class="content">
         <video src="/Video/nails1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
@@ -20,9 +20,9 @@
             <div class="logo">
 
                 <a href="/index.html">
-                    <h2> <span>ClawsByCat</span></h2>
+                    <h2 id="anim"> <span>ClawsByCat</span></h2>
                 </a>
-                <h2 id="anim">Your personal salon</h2>
+                <h2>Your personal salon</h2>
             </div>
 
             <div class="box2">
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
