--- a/kontakt.html
+++ b/kontakt.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ClawsByCat</title>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -75,6 +76,7 @@
         </div>
     </div>
 
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
