--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <div class="cursor"></div>
     <div class="content">
-        <video src="/Video/nails1.mp4" muted loop autoplay></video>
+        <video src="Video/nails1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
 
 
         <div class="container-top">
             <div class="logo">
 
-                <a href="/index.html">
+                <a href="index.html">
                     <h2 id="anim"> <span>ClawsByCat</span></h2>
                 </a>
                 <h2>Your personal salon</h2>
@@ -27,18 +27,18 @@
 
             <div class="box2">
                 <nav class="hidemobile">
-                    <a class="hover" class="hidemobile" href="/index.html">Hem</a>
-                    <a class="hover" class="hidemobile" href="/tjanster.html">Tjänster</a>
-                    <a class="hover" class="hidemobile" href="/portfolio.html">Portfoljo</a>
-                    <a class="hover" class="hidemobile" href="/kontakt.html">Kontakt</a>
+                    <a class="hover" class="hidemobile" href="index.html">Hem</a>
+                    <a class="hover" class="hidemobile" href="tjanster.html">Tjänster</a>
+                    <a class="hover" class="hidemobile" href="portfolio.html">Portfoljo</a>
+                    <a class="hover" class="hidemobile" href="kontakt.html">Kontakt</a>
                 </nav>
                 <div class="menu-mob">
                     <h3>
                         <ul>
-                            <li><a class="hover" href="/index.html">Hem</a></li>
-                            <li><a class="hover" href="/tjanster.html">Tjänster</a></li>
-                            <li><a class="hover" href="/portfolio.html">Portfoljo</a></li>
-                            <li><a class="hover" href="/kontakt.html">Kontakt</a></li>
+                            <li><a class="hover" href="index.html">Hem</a></li>
+                            <li><a class="hover" href="tjanster.html">Tjänster</a></li>
+                            <li><a class="hover" href="portfolio.html">Portfoljo</a></li>
+                            <li><a class="hover" href="kontakt.html">Kontakt</a></li>
                         </ul>
                     </h3>
                 </div>
@@ -63,13 +63,13 @@
             </div>
 
             <div class="social">
-                <a class="hover" href="#" id="facebook"><img src="/img/facebook.png" alt=""></a>
-                <a class="hover" href="#" id="instagram"><img src="/img/instagram.png" alt=""></a>
-                <a class="hover" href="#" id="twitter"><img src="/img/twitter.png" alt=""></a>
+                <a class="hover" href="#" id="facebook"><img src="img/facebook.png" alt=""></a>
+                <a class="hover" href="#" id="instagram"><img src="img/instagram.png" alt=""></a>
+                <a class="hover" href="#" id="twitter"><img src="img/twitter.png" alt=""></a>
             </div>
         </div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
