--- a/tjanster.html
+++ b/tjanster.html
@@ -11,31 +11,31 @@
 
 <body>
     <div class="content">
-        <video src="/Video/nails1.mp4" muted loop autoplay></video>
+        <video src="Video/nails1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
 
 
         <div class="container-top">
             <div class="logo">
                 <h2>
-                    <a href="/index.html"><span>ClawsByCat</span></a>
+                    <a href="index.html"><span>ClawsByCat</span></a>
                     <br>Your personal salon</h2>
             </div>
 
             <div class="box2">
                 <nav class="hidemobile">
-                    <a class="hover" class="hidemobile" href="/index.html">Hem</a>
-                    <a class="hover" class="hidemobile" href="/tjanster.html">Tjänster</a>
-                    <a class="hover" class="hidemobile" href="/portfolio.html">Portfoljo</a>
-                    <a class="hover" class="hidemobile" href="/kontakt.html">Kontakt</a>
+                    <a class="hover" class="hidemobile" href="index.html">Hem</a>
+                    <a class="hover" class="hidemobile" href="tjanster.html">Tjänster</a>
+                    <a class="hover" class="hidemobile" href="portfolio.html">Portfoljo</a>
+                    <a class="hover" class="hidemobile" href="kontakt.html">Kontakt</a>
                 </nav>
                 <div class="menu-mob">
                     <h3>
                         <ul>
-                            <li><a class="hover" href="/index.html">Hem</a></li>
-                            <li><a class="hover" href="/tjanster.html">Tjänster</a></li>
-                            <li><a class="hover" href="/portfolio.html">Portfoljo</a></li>
-                            <li><a class="hover" href="/kontakt.html">Kontakt</a></li>
+                            <li><a class="hover" href="index.html">Hem</a></li>
+                            <li><a class="hover" href="tjanster.html">Tjänster</a></li>
+                            <li><a class="hover" href="portfolio.html">Portfoljo</a></li>
+                            <li><a class="hover" href="kontakt.html">Kontakt</a></li>
                         </ul>
                     </h3>
                 </div>
