links and fixes

--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div class="cursor"></div>
+    <script src="js/main.js"></script>
     <div class="content">
         <video src="Video/nails1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
@@ -76,7 +78,7 @@
         </div>
     </div>
 
-    <script src="/js/main.js"></script>
+
 </body>
 
 </html>
