--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="cursor"></div>
     <div class="content">
         <video src="Video/nails1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
@@ -67,7 +68,7 @@
         </div>
     </div>
 
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
